--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
+html {
+  min-width: 1122px;
+  min-height: 1750px;
+}
+
 body {
+    min-width: 1122px;
+    min-height: 1750px;
+    
     margin: 0;
     padding: 0;
     
@@ -28,7 +36,37 @@ a {
     text-decoration: none;
 }
 
+/*Добавляем для всех изображений!*/
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/*Так выглядят стили для скрытия элементов*/
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/*Делаем все кнопки блочно-строчными*/
 .button {
+    display: inline-block;
+    margin-right: 16px;
+    padding: 10px 30px;
+    
     font: inherit;
     
     text-align: center;
@@ -40,27 +78,119 @@ a {
     border: none;
 }
 
+/*Стили для неактивной кнопки*/
+.button.disabled,
+.button:disabled {
+    cursor: default;
+    opacity: 0.5;
+    background-color: #000000;
+}
+
+
 .button:hover,
 .button:focus,
 .button:active {
     background-color: #663d15;
 }
 
+.main-header {
+    margin-bottom: 75px;
+}
+
 .main-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     
+    background-color: transparent;
+}
+
+.main-navigation-wrapper {
+    width: 100%;
+    margin-bottom: 60px;
+    
     background-color: #000000;
 }
 
-.site-navigation, 
-.user-navigation {
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.main-navigation-wrapper .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-header-logo {
+    order: 1;
+    width: 368px;
+    height: 153px;
+}
+
+.site-navigation {
+    display: flex;
+    flex-wrap: wrap;
+    
+    width: 620px;
+    margin: 0;
+    padding: 0;
+  
     list-style: none;
 }
 
+.user-navigation {
+    display: flex;
+    max-width: 140px;
+    
+    margin: 0;
+    padding: 0;
+  
+    list-style: none;
+}
+
+/*Добавили сюда в паддинг иконку входа*/
+.user-navigation .login-link {
+    position: relative;
+    padding-left: 50px;
+}
+
+.login-link::before {
+    content: "";
+    
+    position: absolute;
+    top: 27px;
+    left: 24px;
+    
+    width: 16px;
+    height: 18px;
+    
+    background-image: url("../img/login.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    
+    opacity: 0.3;
+}
+
+.login-link:hover::before,
+.login-link:focus::before,
+.login-link:active::before {
+  opacity: 1;
+}
+
+
+/*Делаем ссылки блочными, чтобы выровнять*/
 .site-navigation a,
 .user-navigation a {
+    display: block;
+    padding: 25px 20px;
+    
+    vertical-align: middle;
     color: #ffffff;
 }
 
@@ -71,47 +201,188 @@ a {
     background-color: #242424;
 }
 
+.features {
+    margin-bottom: 80px;
+}
+
 .features-list {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+
     list-style: none;
 }
 
 .feature-item {
+    width: 300px;
     text-align: center;
 }
 
+/*Задаём заголовкам нулевой внешний отступ*/
 .feature-item h3 {
+    position: relative;
+    
+    margin: 0;
+    margin-bottom: 60px;
+    
     font-size: 30px; 
     line-height: 42px;
+}
+
+.feature-item h3::after {
+    content: "";
+    
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    margin-left: -10px;
+    
+    width: 20px;
+    height: 20px;
+    
+    background-color: #ffffff;
+    
+    transform: rotate(45deg);
+}
+
+.feature-item p {
+    margin: 0 10px;
 }
 
 .index-columns {
     color: #000000;
     
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 80px;
+    margin-bottom: 35px;
+    
     background-color: #f8f5f2;
-    background-image: url("../img/background-news.jpg");
-    background-position: 0 0;
-    background-repeat: repeat;    
+    background-image: 
+        url(../img/line.png),
+        url("../img/background-news.jpg");
+    background-position: center, 0 0;
+    background-repeat: no-repeat, repeat;    
 }
 
 .index-columns h2 {
+    margin: 0;
+    margin-bottom: 25px;
+    
     font-size: 30px; 
     line-height: 42px;
 }
 
+.news {
+    width: 380px;  
+}
+
 .news-list {
+    margin: 0;
+    margin-bottom: 25px;
+    padding: 0;
+    
     list-style: none;
+}
+
+.news-item {
+    margin-bottom: 25px;
 }
 
 .news-item time {
     text-transform: none;
 }
 
+.news-item p {
+    margin: 0;
+}
+
+.gallery {
+    width: 300px;
+}
+
+/*Галерея фон*/
 .gallery-content {
+    height: 164px;
+    margin: 0;
+    
     background-color: #cccccc;
     border: 7px solid #ffffff;
 }
 
+.gallery-content img {
+    width: 286px;
+    height: 164px;
+}
+
+.gallery-container {
+    position: relative;
+    
+    height: 260px;
+}
+
+/*Задали абсолютное позиционирование*/
+.gallery-button {
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    
+    width: 140px;
+    margin: 0;
+}
+
+/*Расставили кнопки по углам*/
+.gallery-button-back {
+    left: 0;
+}
+
+.gallery-button-next {
+    right: 0;
+}
+
+.contacts {
+    width: 380px;
+}
+
+.contacts p {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.appointment-info {
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+/*Включаем врап, чтобы можно было добавить больше полей!*/
+.appointment-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.appointment-item {
+    width: 140px;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+/*Делаем блочными чтобы выровнять*/
+.appointment-item label {
+    display: block;
+    margin-bottom: 9px;
+    margin-left: 15px;
+}
+
 .appointment-item input {
+    box-sizing: border-box;
+    width: 140px;
+    padding-top: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 7px;
+    
     font: inherit;
     
     background-color: transparent;
@@ -120,6 +391,18 @@ a {
 
 .appointment-item input:focus {
     border-color: #663d15;
+}
+
+.appointment .button {
+    display: block;
+    width: 100%;
+    
+    margin-top: 10px;
+    margin-right: 0;
+}
+
+.appointment {
+    width: 300px;
 }
 
 .page-title {
@@ -244,6 +527,19 @@ a {
     background-image: url("../img/footer-background.jpg");
     background-position: 0 0;
     background-repeat: repeat;
+    
+    margin-top: 65px;
+    padding: 60px 0;
+}
+
+.main-footer .container {
+    display: flex;
+}
+
+.footer-contacts {
+    width: 320px;
+    margin: 0;
+    margin-right: 80px;
 }
 
 .footer-contacts a {
@@ -258,18 +554,65 @@ a {
 
 .social-footer {
     text-align: center;
+    width: 145px;
 }
 
 .social-footer ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 141px;
+    
+    margin: 0 auto;
+    padding: 0;
+    
     list-style: none;
 }
 
 .social-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 43px;
+    height: 43px;
+    
     color: #ffffff;
+    background-color: #000000;
+}
+
+.social-button:hover,
+.social-button:focus {
+  background-color: #ffffff;
+}
+
+/*Меняем заливку инлайнового свг при наведении и фокусе*/
+.social-button:hover path,
+.social-button:focus path {
+  fill: #000000;
+}
+
+.social-footer b {
+    display: block;
+    margin-bottom: 15px;
 }
 
 .footer-copyright {
     text-align: center;
+    
+    width: 150px;
+    margin: 0;
+    margin-left: auto;
+}
+
+.footer-copyright b {
+    display: block;
+    margin-bottom: 15px;
+}
+
+.footer-copyright .button {
+    display: block;
+    margin-right: 0;
 }
 
 .footer-copyright .button:hover,
@@ -320,129 +663,4 @@ a {
 .restore:hover,
 .restore:focus {
     text-decoration: none;
-}
-
-
-/* ----- Сеточные стили ----- */
-
-html,
-body {
-  min-width: 1122px;
-  min-height: 1750px;
-}
-
-.main-header {
-    margin-bottom: 75px;
-}
-
-.main-navigation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.main-navigation-wrapper {
-    width: 100%;
-    margin-bottom: 60px;
-    
-    background-color: #000000;
-}
-
-.container {
-  width: 940px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.main-navigation-wrapper .container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-header-logo {
-    order: 1;
-    width: 368px;
-    height: 153px;
-}
-
-.site-navigation {
-    width: 620px;
-    margin: 0;
-    padding: 0;
-  
-    list-style: none;
-}
-
-.user-navigation {
-    width: 140px;
-    
-    margin: 0;
-    padding: 0;
-  
-    list-style: none;
-}
-
-.features {
-    margin-bottom: 80px;
-}
-
-.features-list {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-}
-
-.feature-item {
-    width: 300px;
-}
-
-.index-columns {
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 80px;
-    margin-bottom: 35px;
-}
-
-.news {
-    width: 380px;
-}
-
-.gallery {
-    width: 300px;
-}
-
-.contacts {
-    width: 380px;
-}
-
-.appointment {
-    width: 300px;
-}
-
-.main-footer {
-    margin-top: 65px;
-    padding: 60px 0;
-}
-
-.main-footer .container {
-    display: flex;
-}
-
-.footer-contacts {
-    width: 320px;
-    margin: 0;
-    margin-right: 80px;
-}
-
-.footer-social {
-    width: 145px;
-}
-
-.footer-copyright {
-   width: 150px;
-    margin: 0;
-    margin-left: auto;
 }
